Test Your Skills

--- a/notebooks/test_skills.ipynb
+++ b/notebooks/test_skills.ipynb
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,26 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Challenge 3: Add A Site Boundary to Your Raster Plot\n",
+    "\n",
+    "fig, ax = plt.subplots(figsize=(10, 6))\n",
+    "\n",
+    "ep.plot_bands(lidar_dem_im, \n",
+    "              ax=ax, \n",
+    "              cmap='viridis',\n",
+    "              title=\"Challenge 2: Lidar Digital Terrain Model (DTM)\\n overlayed on top of a hillshade\")\n",
+    "\n",
+    "ep.plot_bands(lidar_dem_hill, \n",
+    "              cmap='gray', \n",
+    "              alpha=0.5, \n",
+    "              ax=ax, \n",
+    "              cbar=False)\n",
+    "\n",
+    "ax.set_axis_off()\n",
+    "\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
